change deploy build-dist

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "lottodrum",
   "private": true,
-  "homepage": "https://Sargis82.github.io/lotterydrum",
+  "homepage": "https://Sargis82.github.io/lotterydrum/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
